--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Discord bot created of a prank me and my pals used to do in ours discord servers, changing the Nick to a version of users name but wtih letters out of order",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.6"
+    "@types/express": "^4.17.6",
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
